kubes/kafka_pod.yml
apiVersion: extensions/v1beta1 # for versions before 1.7.0 use apps/v1beta1
kind: Deployment
metadata:
  name: kafka-broker
  namespace: poc0154-dev-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      containers:
      - name: kafka-broker
        image: caas.lbgsandbox.com:8500/poc0154-dev-ns/kafka-broker:1.0.0
        resources:
          limits:
            memory: "500Mi"
            cpu: "1"
          requests:
            memory: "300Mi"
            cpu: "1"
        ports:
        - containerPort: 9092
      - name: zookeeper
        image: caas.lbgsandbox.com:8500/poc0154-dev-ns/zookeeper:1.0.0
        resources:
          limits:
            memory: "500Mi"
            cpu: "1"
          requests:
            memory: "300Mi"
            cpu: "1"
        ports:
        - containerPort: 2181
