kubes/kafka_service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
spec:
  type: ClusterIP
  ports:
    - port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: kafka-broker
